lab1/Test/L1-A-7-68.output
Error Type A at Line 10
Error Type A at Line 26
Error Type A at Line 40
