lab1/Test/L1-A-7-68.cmm
float HcuBeTnA098b5wKybAM ( ) {
  int OS2oh5tnZkcq [ 516595526 ] = a5M95JsS = VU && 
    cp2QBJl9vqtb5k9 - Nfa94vsOAiHhqf2vENs / ! PShJY [ 
    v96B7MiPKJP || AG1qWR2TFd8U < NAkTDd_loA8we + ( trzs83JY 
    = mIBd7fV6rwEqgZv = JlfJ = hTK6t95Rtpy4iCT1Id || gzHSbcxPOQVp8g 
    >= oswD / ! S6JMWR3OqZF5 ( AgBDDzAyI4cqVG , iXj7L7rd1XV2qZFoQT 
    <= gOlEOr9nV6Z0X5_ - XuFliWXwcAf9 * - dCSrG ( GPC 
    , VqM , EbPef5Nt0 != V9cThn > ! HlhEGq4FyDYbzi * ! 
    - 676936206.1885766142 == - 1048056509 ) ) ) ] * - 
    ByZ0ZxLSn ( ) . HeKV #, gX4BSj5WI2ZcH6 ;
}
struct y7EC8T8BafO0XxJ1 {
  int WB311LEz ;
}FGvYH9l9OXI98 
;
struct qCzr6j8J_my ;
struct I eLyS 
;
struct sHKit P7mjmgXCme3FS , hUKF1xNUB 

;
int ;
struct {
}BjZHsGitwS 
;
int $;
int Trm ( int gL , int MRQSpA0a5 ) {
  VtFjU ;
  sLTt0jFaZpWH8r4dO ;
  if ( T_rZpsiFSmiw4z1WRgJ1 ) {
{
      ii1pr0Hhkt7OeSW ;
      j1xTR_JsK3jQ7pTE ;
      RqLWkn ;
      if ( acv7nlXKlJc9ZfFeKBPN )       diqQUA ;
else       if ( XGNgdAMkI4KiLSer0HC )       ai9E ;


    }    vTSySTzE98_Hm ;
    if ( 'wyOKzk1Gcu_zkX )     Gr9_feYPW ;
else     while ( R9jJcD )     tlh ;


    return UyLhgZQHdn ;
    d0flb46T ;
  }
}
